--- a/react/app/cart/cart.css
+++ b/react/app/cart/cart.css
@@ -3,7 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 40px;
+}
+
+.cart h1 {
+    text-align: center;
+    font-size: 32px;
 }
 
 .cartItem {
