--- a/react/app/login/login.css
+++ b/react/app/login/login.css
@@ -14,14 +14,23 @@
     margin: 10px auto;
 }
 
-.username,
-.password {
+.username {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 8px;
+    margin: 10px;
     display: inline-block;
     margin-left: 5px;
     padding: 2.5px 5px;
 }
 
 .button {
-    font-weight: bold;
-    padding: 5px;
+    width: 150px;
+    height: 50px;
+    background-color: rgb(19, 19, 19);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    margin: 10px;
+    cursor: pointer;
 }
