--- a/react/app/cart/cart.css
+++ b/react/app/cart/cart.css
@@ -56,17 +56,11 @@
     font-size: 24px;
 }
 
-.total {
-    font-size: 36px;
+.checkout button {
+    margin: 0 5px;
 }
 
-.checkout button {
-    width: 150px;
-    height: 50px;
-    background-color: rgb(19, 19, 19);
-    color: white;
-    border: none;
-    border-radius: 8px;
-    margin: 10px;
-    cursor: pointer;
+
+.total {
+    font-size: 36px;
 }
