--- a/react/app/cart/cart.css
+++ b/react/app/cart/cart.css
@@ -1,9 +1,16 @@
+.cartcontent {
+    margin-top: 32px;
+    text-align: center;
+    font-size: 32px;
+}
+
 .cart {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
+    width: 100%;
+    height: auto;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: start;
 }
 
 .cart h1 {
@@ -12,18 +19,18 @@
 }
 
 .cartItem {
-    width: 700px;
-    height: 250px;
+    width: 320px;
+    height: 220px;
     display: flex;
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 25px;
-    margin: 30px;
+    margin: 10px;
     padding: 20px;
 }
 
 .cartItem img {
-    width: 200px;
+    width: 120px;
     max-height: 90%;
     object-fit: contain;
 }
@@ -37,7 +44,7 @@
 .cartItemTitle {
     font-weight: bold;
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .countHandler input {
@@ -49,10 +56,13 @@
 
 .countHandler button {
     padding: 0 0.5em;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 5px 10px;
 }
 
 .subtotal {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 24px;
 }
 
@@ -62,5 +72,5 @@
 
 
 .total {
-    font-size: 36px;
+    font-size: 32px;
 }
